samples/_failures_safe/1761317676_c41796_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_587edce0.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_587edce0.c:155:11: error: expected ‘;’ at end of input
  155 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_587edce0.c:155:5: error: expected declaration or statement at end of input
  155 |     printf
      |     ^~~~~~
